--- a/pages/about.html
+++ b/pages/about.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<head>
-  <title>Portfolio Page</title>
+  <head>
+  <title>About Me</title>
   <link href="style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
   <header>
-    <img id="profile" src="images/stareEyesGlasses.gif">
-    <h1>Andre Isaac's Portflio</h1>
+    <img id="profile" src="">
+    <h1>Abghjgout Me</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="pages/about.html">About Me</a></li>
+      <li><a class="nav" href=""</a></li>
       <li><a class="nav" href="">Social Media
       </a></li>
     </ul>
